@@ -1,3 +1,8 @@
+2007-12-18  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Ide.Commands/HelpCommands.cs, MonoDevelop.Ide.addin.xml: Added
+	  default handler for the help command that starts Monodoc.
+
 2007-12-17  Aaron Bockover <abockover@novell.com>
 
 	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs: If the monodevelop icon is 
